--- a/app/views/matches/_match.html.erb
+++ b/app/views/matches/_match.html.erb
@@ -1,5 +1,8 @@
 <!--<div class="collapsible-body"> <%= "#{match.id} \t #{match.away} #{match.a_score} @ #{match.home} #{match.h_score}" %> </div>-->
 <tr>
-  <td> <%= "#{match.away} #{match.a_score} @ #{match.h_score} #{match.home}" %> </td>
+  <td class="time" style="text-align: center"> <%= match.away %> </td>
+  <td style="text-align: center"> <%= match.a_score %> </td>
+  <td style="text-align: center"> <%= match.a_score %> </td>
+  <td style="text-align: center"> <%= match.home %> </td>
   <td> <%= button_to 'control_point', match, :method => :get, action: :simulate, class: "material-icons" %> </td>
 </tr>
