view edits and some little changes on DB

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
       <div class="nav-wrapper red darken-4">
         <a href="#" class="brand-logo center"> My Major League Baseball </a>
         <ul class="right">
-          <li><a href="#"> Standings </a></li>
+          <li> <%= link_to 'Standings', 'standings/divisional' %> </li>
           <li><a href="#"> Postseason </a></li>
         </ul>
         <ul class="left">
