--- a/app/views/matches/_form.html.erb
+++ b/app/views/matches/_form.html.erb
@@ -10,8 +10,11 @@
       </ul>
     </div>
   <% end %>
-  <% @match.h_score ||= Random.rand(0..10) %>
-  <% @match.a_score ||= Random.rand(0..10) %>
+  <% home, away = get_score %>
+  <% @match.h_score ||= home %>
+  <% @match.a_score ||= away %>
+  <% h = Team.find_by_name @match.home %>
+  <% a = Team.find_by_name @match.away %>
 
   <div class="field">
     <%= f.label :away %>
@@ -39,6 +42,28 @@
   </div>
 
   <div class="actions">
+    <%
+      if not @match.happened
+        h.increment!(:pf, home)
+        h.increment!(:pa, away)
+        a.increment!(:pf, away)
+        a.increment!(:pa, home)
+        if home > away # hw, al
+          h.increment!(:hw)
+          h.increment!(:win)
+          a.increment!(:al)
+          a.increment!(:loss)
+        else # hl, aw
+          a.increment!(:aw)
+          a.increment!(:win)
+          h.increment!(:hl)
+          h.increment!(:loss)
+        end
+        h.save!
+        a.save!
+        @match.happened = TRUE
+      end
+    %>
     <%= f.submit %>
   </div>
 <% end %>
