--- a/app/views/matches/_match.html.erb
+++ b/app/views/matches/_match.html.erb
@@ -1,8 +1,8 @@
 <!--<div class="collapsible-body"> <%= "#{match.id} \t #{match.away} #{match.a_score} @ #{match.home} #{match.h_score}" %> </div>-->
 <tr>
-  <td class="time" style="text-align: center"> <%= match.away %> </td>
+  <td style="text-align: center"> <div class="time"> <%= match.away %> </div> </td>
   <td style="text-align: center"> <%= match.a_score %> </td>
-  <td style="text-align: center"> <%= match.a_score %> </td>
+  <td style="text-align: center"> <%= match.h_score %> </td>
   <td style="text-align: center"> <%= match.home %> </td>
-  <td> <%= button_to 'control_point', match, :method => :get, action: :simulate, class: "material-icons" %> </td>
+  <td> <%= link_to 'Play Ball', edit_match_path(match), class: "waves-effect waves-light btn green darken-4" %> </td>
 </tr>
