new columns added on team DB -- classification updated

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,11 +19,11 @@
       <div class="nav-wrapper red darken-4">
         <a href="#" class="brand-logo center"> My Major League Baseball </a>
         <ul class="right">
-          <li> <%= link_to 'Standings', 'standings/divisional' %> </li>
+          <li> <%= link_to 'Standings', divisional_url %> </li>
           <li><a href="#"> Postseason </a></li>
         </ul>
         <ul class="left">
-          <li> <%= link_to "Schedule", 'schedule/show' %> </li>
+          <li> <%= link_to "Schedule", schedule_show_url %> </li>
         </ul>
       </div>
     </nav>
